<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.scenes.spells.SpellsFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <android.widget.Button
      android:id="@+id/btnSpellsCharm"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_weight="1"
      android:textAllCaps="false"
      android:text="@string/spells_charm"
      android:background="@drawable/selectable_button" />

    <android.widget.Button
      android:id="@+id/btnSpellsSpell"
      android:textAllCaps="false"
      android:text="@string/spells_spell"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_weight="1"
      android:background="@drawable/selectable_button" />

    <android.widget.Button
      android:id="@+id/btnSpellsJinx"
      android:layout_width="0dp"
      android:textAllCaps="false"
      android:text="@string/spells_jinx"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_weight="1"
      android:background="@drawable/selectable_button" />

    <android.widget.Button
      android:textAllCaps="false"
      android:text="@string/spells_curse"
      android:id="@+id/btnSpellsCurse"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_weight="1"
      android:background="@drawable/selectable_button" />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerSpells"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>